fixed the y of gallery not showing up on mobile.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,7 +110,6 @@ img {
 
 #gallery_launch_title {
 	font-size: 32px;
-	vertical-align: auto;
 }
 /************ END Launch **************/
 /*********** Art/Artist ***********/
